# kspacefirstorder-unified

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  install_dependencies.sh
.github/workflows/: ci-format.yml  ci-linux.yml  ci-macos.yml  ci-multi-platform.yml  ci-static-analysis.yml  ci-windows.yml  link-checker.yml  release.yml
cmake/: CompilerFlags.cmake  FindDependencies.cmake  PlatformDetection.cmake
plans/: 03-improvements.md  04-ci-recovery-plan.md  05-vcpkg-migration-plan.md  06-start-over.md  06a-inventory.md  07-unification-roadmap.md  ai-unification-plan.md  build-system-enhancement-plan.md  unification-plan.md
scripts/: bootstrap-vcpkg.ps1  bootstrap-vcpkg.sh
scripts/submodules/: README.md
src/: CMakeLists.txt  main.cpp
src/backends/cuda/: CMakeLists.txt
src/backends/cuda/Containers/: CudaMatrixContainer.cu  CudaMatrixContainer.cuh
src/backends/cuda/KSpaceSolver/: SolverCudaKernels.cu  SolverCudaKernels.cuh
src/backends/cuda/MatrixClasses/: CufftComplexMatrix.cpp  CufftComplexMatrix.h  TransposeCudaKernels.cu  TransposeCudaKernels.cuh
src/backends/cuda/OutputStreams/: OutputStreamsCudaKernels.cu  OutputStreamsCudaKernels.cuh
src/backends/cuda/Parameters/: CudaDeviceConstants.cu  CudaDeviceConstants.cuh  CudaParameters.cpp  CudaParameters.h
src/backends/cuda/Utils/: CudaUtils.cuh
src/backends/openmp/: CMakeLists.txt
src/backends/openmp/MatrixClasses/: FftwComplexMatrix.cpp  FftwComplexMatrix.h  FftwRealMatrix.cpp  FftwRealMatrix.h
src/core/: CMakeLists.txt  CommandLineParameters.cpp  CommandLineParameters.h  ErrorMessages.h  ErrorMessagesWindows.h  KSpaceFirstOrderSolver.cpp  KSpaceFirstOrderSolver.h  Logger.cpp  Logger.h  OutputMessages.h  OutputMessagesWindows.h  Parameters.cpp  Parameters.h  sse2neon.h
src/core/Containers/: MatrixContainer.cpp  MatrixContainer.h  MatrixRecord.h  OutputStreamContainer.cpp  OutputStreamContainer.h
src/core/HDF5/: Hdf5File.cpp  Hdf5File.h  Hdf5FileHeader.cpp  Hdf5FileHeader.h
src/core/MatrixClasses/: BaseFloatMatrix.cpp  BaseFloatMatrix.h  BaseIndexMatrix.cpp  BaseIndexMatrix.h  BaseMatrix.h  ComplexMatrix.cpp  ComplexMatrix.h  IndexMatrix.cpp  IndexMatrix.h  RealMatrix.cpp  RealMatrix.h
src/core/OutputStreams/: BaseOutputStream.cpp  BaseOutputStream.h  CuboidOutputStream.cpp  CuboidOutputStream.h  IndexOutputStream.cpp  IndexOutputStream.h  WholeDomainOutputStream.cpp  WholeDomainOutputStream.h
src/core/Utils/: DimensionSizes.h  TimeMeasure.h
test_cmake/: CMakeLists.txt
